cabal-version:      >= 1.10
build-type:         Simple
name:               ghcid
version:            0.1.3
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014
synopsis:           GHCi based bare bones IDE
description:
    Either \"GHCi as a daemon\" or \"GHC + a bit of an IDE\". A very simple Haskell development tool which shows you the errors in your project and updates them whenever you save. Run @ghcid --height=10 --topmost --command=ghci@, where @--height@ is the height of the console you will use, @--topmost@ makes the window on top of all others (Windows only) and @--command@ is the command to start GHCi on your project.
homepage:           https://github.com/ndmitchell/ghcid#readme
bug-reports:        https://github.com/ndmitchell/ghcid/issues
tested-with:        
                    GHC==7.8.2,
                    GHC==7.6.3
extra-source-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/ndmitchell/ghcid.git

library
  hs-source-dirs:  src
  default-language: Haskell2010  
  build-depends:   
        base >= 4,
        filepath,
        time,
        directory,
        process >= 1.1,
        cmdargs >= 0.10
  ghc-options:     -Wall
  other-modules:   
                   Language.Haskell.Ghcid.Types,
                   Language.Haskell.Ghcid.Parser,
                   Language.Haskell.Ghcid.Util
  exposed-modules: Language.Haskell.Ghcid

executable ghcid
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
      base == 4.*,
      filepath,
      time,
      directory,
      process >= 1.1,
      cmdargs >= 0.10
  other-modules:   
                   Language.Haskell.Ghcid.Types,
                   Language.Haskell.Ghcid.Parser,
                   Language.Haskell.Ghcid.Util,
                   Language.Haskell.Ghcid,
                   Language.Haskell.GhcidProgram

test-suite ghcid_test
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  default-language: Haskell2010  
  build-depends:   
    base >= 4,
    filepath,
    time,
    directory,
    process,
    cmdargs,
    tasty,
    tasty-hunit
  hs-source-dirs:  test, src
  main-is:         ghcid_test.hs
  other-modules:   
                   Language.Haskell.Ghcid.ParserTest,
                   Language.Haskell.Ghcid.HighLevelTests,
                   Language.Haskell.Ghcid.UtilTest,
                   Language.Haskell.Ghcid.ScriptedTest,
                   Language.Haskell.GhcidProgram
