cabal-version:      >= 1.18
build-type:         Simple
name:               ghcid
version:            0.8
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>, jpmoresmau
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014-2019
synopsis:           GHCi based bare bones IDE
description:
    Either \"GHCi as a daemon\" or \"GHC + a bit of an IDE\". A very simple Haskell development tool which shows you the errors in your project and updates them whenever you save. Run @ghcid --topmost --command=ghci@, where @--topmost@ makes the window on top of all others (Windows only) and @--command@ is the command to start GHCi on your project (defaults to @ghci@ if you have a @.ghci@ file, or else to @cabal repl@).
homepage:           https://github.com/ndmitchell/ghcid#readme
bug-reports:        https://github.com/ndmitchell/ghcid/issues
tested-with:        GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3
extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/ndmitchell/ghcid.git

library
    hs-source-dirs:  src
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        filepath,
        time >= 1.5,
        directory >= 1.2,
        extra >= 1.6.6,
        process >= 1.1,
        ansi-terminal,
        cmdargs >= 0.10

    exposed-modules:
        Language.Haskell.Ghcid
    other-modules:
        Paths_ghcid
        Language.Haskell.Ghcid.Escape
        Language.Haskell.Ghcid.Parser
        Language.Haskell.Ghcid.Types
        Language.Haskell.Ghcid.Util

executable ghcid
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -main-is Ghcid.main -threaded -rtsopts
    main-is: Ghcid.hs
    build-depends:
        base >= 4.7 && < 5,
        filepath,
        time >= 1.5,
        directory >= 1.2,
        containers,
        fsnotify,
        extra >= 1.6.6,
        process >= 1.1,
        cmdargs >= 0.10,
        ansi-terminal,
        terminal-size >= 0.3
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    other-modules:
        Language.Haskell.Ghcid.Escape
        Language.Haskell.Ghcid.Parser
        Language.Haskell.Ghcid.Terminal
        Language.Haskell.Ghcid.Types
        Language.Haskell.Ghcid.Util
        Language.Haskell.Ghcid
        Paths_ghcid
        Session
        Wait

test-suite ghcid_test
    type:            exitcode-stdio-1.0
    hs-source-dirs:  src
    main-is:         Test.hs
    ghc-options:     -rtsopts -main-is Test.main -threaded -with-rtsopts=-K1K
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        filepath,
        time >= 1.5,
        directory >= 1.2,
        process,
        containers,
        fsnotify,
        extra >= 1.6.6,
        ansi-terminal,
        terminal-size >= 0.3,
        cmdargs,
        tasty,
        tasty-hunit
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    other-modules:
        Ghcid
        Language.Haskell.Ghcid
        Language.Haskell.Ghcid.Escape
        Language.Haskell.Ghcid.Parser
        Language.Haskell.Ghcid.Terminal
        Language.Haskell.Ghcid.Types
        Language.Haskell.Ghcid.Util
        Paths_ghcid
        Session
        Test.API
        Test.Ghcid
        Test.Parser
        Test.Util
        Wait
